--- a/CompanyNews/Views/ClientApp/ClientHomePage.xaml
+++ b/CompanyNews/Views/ClientApp/ClientHomePage.xaml
@@ -4,12 +4,293 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CompanyNews.Views.ClientApp"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      mc:Ignorable="d" 
-      MinHeight="700" MinWidth="1200"
+      xmlns:ViewModel="clr-namespace:CompanyNews.ViewModels.ClientApp"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+      mc:Ignorable="d"
+      MinHeight="700" Width="Auto"
       Title="ClientHomePage">
 
-    <Grid>
+    <Page.Resources>
+
+        <!--связываем View и ViewModel-->
+        <ViewModel:ClientHomeViewModel x:Key="ClientHomeViewModel"/>
+
+        <!--анимация подсветки полей-->
+        <Storyboard x:Key="fieldIllumination">
+            <ColorAnimation Storyboard.TargetProperty="Background.(SolidColorBrush.Color)"
+From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
+        </Storyboard>
+
+    </Page.Resources>
+
+    <Grid DataContext="{StaticResource ClientHomeViewModel}"  Background="AliceBlue">
+
+        <!--стили-->
+        <Grid.Resources>
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="\Dictionary\HamburgerMenu.xaml"/>
+                    <ResourceDictionary Source="\Dictionary\Button.xaml"/>
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </Grid.Resources>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="400"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <!--Сообщения системы-->
+        <Border Grid.Column="1" Grid.Row="0" Grid.RowSpan="4" Background="#FFEACBC0" CornerRadius="5" BorderBrush="Black" 
+    BorderThickness="1" x:Name="SystemMessageBorder" Visibility="Hidden" Panel.ZIndex="1"
+    HorizontalAlignment="Right" VerticalAlignment="Top" Height="Auto" Width="400" Margin="0,110,-5,0">
+            <!--Тело сообщения-->
+            <TextBlock Text="{Binding SystemMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  
+x:Name="SystemMessage" HorizontalAlignment="Left" VerticalAlignment="Center"
+Margin="10, 10, 10, 10" 
+FontWeight="Regular" FontSize="18"
+Width="370"
+TextWrapping="Wrap"/>
+        </Border>
+
+        <!--Сообщение, если нет канала-->
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="Канал не найден" HorizontalAlignment="Center" Margin="0,250,0,0"  FontSize="20"
+           Visibility="{Binding IsNoСhannel, Mode=TwoWay, Converter={StaticResource BooleanToVisibilityConverter}}" Panel.ZIndex="1"/>
+
+        <!--Сообщение, если нет постов-->
+        <TextBlock Grid.Column="1" Grid.Row="0" Text="Публикации отсутствуют" HorizontalAlignment="Center" Margin="0,200,0,0" FontSize="20"
+    Visibility="{Binding IsNoPost, Mode=TwoWay, Converter={StaticResource BooleanToVisibilityConverter}}" Panel.ZIndex="1"/>
+
+        <!--#region ListCategory-->
+
+        <!--Поиск-->
+        <TextBox Grid.Column="0" x:Name="Search" 
+      Height="50" Margin="0,45,0,0" Panel.ZIndex="1"
+      VerticalAlignment="Top" HorizontalAlignment="Center"
+      Text="{Binding UserSearch, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+      materialDesign:TextFieldAssist.HasClearButton="True"
+      TextChanged="CategorySearch"
+      Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+      materialDesign:HintAssist.Hint="Поиск канала" 
+      materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
+      MaxLength="100" TextWrapping="Wrap" Width="300" />
+
+        <Border Grid.Row="0" Grid.Column="0" Height="1" Background="Gray" Margin="25,140,41.5,0" Panel.ZIndex="1"
+                VerticalAlignment="Top"/>
+        <Canvas Grid.Row="0" Grid.Column="0" Panel.ZIndex="1">
+            <Line X1="400" Y1="0" X2="400" Y2="2000" Stroke="Black" StrokeThickness="1" />
+        </Canvas>
+
+        <TextBlock Margin="25,115,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="16" FontWeight="UltraLight" Width="60" Height="20" Grid.Column="0" Text="Каналы"  Panel.ZIndex="1"/>
+
+        <!--скролл категорий-->
+        <Grid Grid.Column="0" Background="Azure">
+            <ScrollViewer  Margin="0,140,0,0" Padding="0,0,0,150" VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left"  Width="400">
+
+                <!--список категорий-->
+                <ItemsControl ItemsSource="{Binding ListAvailableCategories}" Margin="0,0,0,0" Padding="0,0,0,0">
+
+                    <!--расположение элементов раскрывающегося списка-->
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Vertical"  HorizontalAlignment="Left"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+
+                    <!--дизайн макет кнопок-->
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+
+                                <!--размеры и отступы карточек-->
+                                <Border  Grid.Row="0"  Margin="0,0,0,0" BorderBrush="Transparent" BorderThickness="0.5" HorizontalAlignment="Left">
+                                    <Button Width="400"  BorderBrush="Transparent" BorderThickness="0" HorizontalContentAlignment="Left"
+                                        Padding="0,0,0,0" Height="Auto" materialDesign:RippleAssist.IsDisabled="True" Click="LaunchingCategory">
+                                        <TextBlock Text="{Binding name}" Padding="40,15,40,15" TextWrapping="Wrap" MaxHeight="100" TextTrimming="CharacterEllipsis" FontSize="20" FontWeight="DemiBold" TextAlignment="Left"/>
+
+                                        <Button.Style>
+                                            <Style TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedSecondaryButton}">
+                                                <Setter Property="Background" Value="Transparent"/>
+                                                <Setter Property="Foreground" Value="Black"/>
+                                                <Setter Property="FontSize" Value="16"/>
+                                                <Setter Property="FontWeight" Value="Regular"/>
+                                                <Setter Property="Opacity" Value="1"/>
+
+                                                <Style.Triggers>
+                                                    <Trigger Property="IsMouseOver" Value="True">
+                                                        <Setter Property="Background" Value="LightGray"/>
+                                                        <Setter Property="Foreground" Value="Black"/>
+                                                    </Trigger>
+
+                                                    <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                                                        <Setter Property="Foreground" Value="DarkRed"/>
+                                                        <!-- Цвет выделенной кнопки -->
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Button.Style>
+
+                                    </Button>
+                                </Border>
+
+                                <Border Grid.Row="1" Grid.ColumnSpan="3" Height="1" Background="Gray" Margin="25,0,25,0" />
+
+
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+
+                </ItemsControl>
+
+            </ScrollViewer>
+        </Grid>
+
+        <!--#endregion-->
+
+        <ScrollViewer Grid.Column="1" Margin="0,0,0,0" VerticalScrollBarVisibility="Auto" x:Name="ScrollViewerPost">
+            <Grid Margin="0,0,0,150">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <!--Заголовок-->
+            <TextBlock Grid.Row="0" Text="{Binding HeadingPage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+    FontSize="30" Width="Auto" TextWrapping="Wrap"
+    Foreground="Black" FontWeight="DemiBold" Margin="50,35,0,30" 
+    VerticalAlignment="Center" HorizontalAlignment="Left"/>
+
+            <!--#region Posts-->
+           
+                <ItemsControl Grid.Row="1" ItemsSource="{Binding ListNewsPostExtendeds}">
+
+                    <!--расположение элементов раскрывающегося списка-->
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Vertical"  HorizontalAlignment="Center"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+
+                    <!--дизайн макет карточек постов-->
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <!--размеры и отступы карточек-->
+                            <Border Width="600" Margin="0,20,0,0" BorderBrush="Black" BorderThickness="1.0" CornerRadius="10" Background="FloralWhite">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+                                    
+                                    <!--дата-->
+                                    <TextBlock Grid.Row="0" HorizontalAlignment="Left" 
+                                        FontSize="13" Margin="50,15,0,0" TextWrapping="Wrap">
+                                        <Run Text="Опубликовано -" FontWeight="DemiBold"/>
+                                        <Run Text="{Binding datePublication, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}" FontStyle="Italic" FontWeight="UltraLight"/>
+                                    </TextBlock>
+
+                                    <Border Height="1" Background="Gray" Margin="25,45,41.5,0" Panel.ZIndex="1"
+          VerticalAlignment="Top"/>
+
+                                    <!--Текст-->
+                                    <TextBlock Grid.Row="1" HorizontalAlignment="Left" 
+                                       FontSize="18" Margin="30,10,30,0" TextWrapping="Wrap" TextAlignment="Justify">
+                                        <Run Text="{Binding message}" FontStyle="Italic" FontWeight="Light"/>
+                                    </TextBlock>
+
+                                    <!--Изображение-->
+                                    <Image Grid.Row="2" Source="{Binding image}" 
+                    Width="300" Height="300" Stretch="Uniform" HorizontalAlignment="Center" Margin="0,0,0,15">
+                                        <Image.Style>
+                                            <Style TargetType="Image">
+                                                <Setter Property="Visibility" Value="Visible"/>
+                                                <!-- Скрыто по умолчанию -->
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding image}" Value="">
+                                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                                        <!--  Скрыто, если пусто -->
+                                                    </DataTrigger>
+                                                    <DataTrigger Binding="{Binding image}" Value="{x:Null}">
+                                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                                        <!--  Скрыто, если null -->
+                                                    </DataTrigger>
+                                                    <DataTrigger Binding="{Binding image}">
+                                                        <Setter Property="Visibility" Value="Visible"/>
+                                                        <!-- Показывается, если есть изображение -->
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Image.Style>
+                                    </Image>
+
+                                    <!--Кнопки-->
+                                    <Button Grid.Row="3" Height="30" Padding="0,-5,0,-5" Margin="30,20,0,15" BorderBrush="Black" materialDesign:RippleAssist.IsDisabled="True" 
+                                            VerticalAlignment="Center" HorizontalAlignment="Left" Command="{Binding OpenPopupChangeImage}" Width="50"  
+                                            materialDesign:ButtonAssist.CornerRadius="10" Click="OpenPost"
+                                            ToolTip="MaterialDesignFloatingActionMiniDarkButton">
+
+                                        <Button.Style>
+                                            <Style TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedSecondaryButton}">
+                                                <Setter Property="Background" Value="Transparent"/>
+                                                <Setter Property="Foreground" Value="Black"/>
+                                                <Setter Property="FontSize" Value="16"/>
+                                                <Setter Property="FontWeight" Value="Regular"/>
+                                                <Setter Property="Opacity" Value="1"/>
+
+                                                <Style.Triggers>
+                                                    <Trigger Property="IsMouseOver" Value="True">
+                                                        <Setter Property="Background">
+                                                            <Setter.Value>
+                                                                <SolidColorBrush Color="Black"/>
+                                                            </Setter.Value>
+                                                        </Setter>
+                                                        <Setter Property="Background" Value="Black"/>
+                                                        <Setter Property="Foreground" Value="White"/>
+
+                                                        <Trigger.EnterActions>
+                                                            <BeginStoryboard>
+                                                                <Storyboard>
+                                                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" From="1" To="0.7" Duration="0:0:0.2" AutoReverse="True"/>
+                                                                </Storyboard>
+                                                            </BeginStoryboard>
+                                                        </Trigger.EnterActions>
+                                                    </Trigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Button.Style>
+
+                                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                            <materialDesign:PackIcon Kind="Comment" Width="20" Height="20" />
+                                        </StackPanel>
+                                    </Button>
+
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+
+                </ItemsControl>
+            
+
+            <!--#endregion-->
+
+        </Grid>
+        </ScrollViewer>
+        
+        <Frame Grid.Column="1" Content="{Binding PageFrame, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+NavigationUIVisibility="Hidden"  Panel.ZIndex="1"/>
 
     </Grid>
 </Page>
