--- a/CompanyNews/Views/AdminApp/WorkDepartmentPage.xaml
+++ b/CompanyNews/Views/AdminApp/WorkDepartmentPage.xaml
@@ -7,7 +7,7 @@
       xmlns:ViewModel="clr-namespace:CompanyNews.ViewModels.AdminApp"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
       mc:Ignorable="d" SizeChanged="Window_SizeChanged"
-      MouseLeftButtonDown="Window_MouseLeftButtonDown"
+      PreviewMouseLeftButtonUp="Window_MouseLeftButtonDown"
       MinHeight="700" Width="Auto"
       Title="WorkDepartmentPage">
 
