--- a/CompanyNews/Views/AdminApp/MessageUserPage.xaml
+++ b/CompanyNews/Views/AdminApp/MessageUserPage.xaml
@@ -95,7 +95,7 @@ TextWrapping="Wrap"/>
                         Grid.Column="0" Grid.Row="1" x:Name="Category" DisplayMemberPath="name"
                         SelectedValue="{Binding SelectedCategory, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                         IsReadOnly="False" VerticalAlignment="Center" Width="220" Margin="10,0,0,0" MinWidth="100" Height="50" 
-                        materialDesign:HintAssist.Hint="Поиск поста по категории" IsEditable="True"
+                        materialDesign:HintAssist.Hint="Поиск поста по группе" IsEditable="True"
                         Style="{StaticResource MaterialDesignOutlinedComboBox}">
                         </ComboBox>
 
@@ -191,7 +191,7 @@ Style="{StaticResource MaterialDesignChoiceChipListBox}">
                                             </TextBlock>
 
                                             <TextBlock Grid.Row="1" HorizontalAlignment="Left" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" Margin="0,10,0,0">
-                                            <Run Text="Категория поста: " FontSize="16" FontWeight="Bold"/>
+                                            <Run Text="Группа публикации: " FontSize="16" FontWeight="Bold"/>
                                             <Run Text="{Binding NewsPostExtended.newsCategoryName,  StringFormat='{}{0:dd.MM.yyyy HH:mm}'}" FontSize="16" FontWeight="Medium"/>
                                             </TextBlock>
                                         </Grid>
