--- a/CompanyNews/Views/AdminApp/NewsPostPage.xaml
+++ b/CompanyNews/Views/AdminApp/NewsPostPage.xaml
@@ -94,7 +94,7 @@ TextWrapping="Wrap"/>
                         Grid.Column="0" Grid.Row="1" x:Name="Category" DisplayMemberPath="name"
                         SelectedValue="{Binding SelectedCategory, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                         IsReadOnly="False" VerticalAlignment="Center" Width="200" Margin="10,0,0,0" MinWidth="100" Height="50" 
-                        materialDesign:HintAssist.Hint="Просмотр по категории" IsEditable="True"
+                        materialDesign:HintAssist.Hint="Просмотр по группе" IsEditable="True"
                         Style="{StaticResource MaterialDesignOutlinedComboBox}">
                 </ComboBox>
 
@@ -168,7 +168,7 @@ Margin="10,0,0,0" IsEnabled="{Binding IsWorkButtonEnable}"/>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
 
-                        <DataGridTextColumn Header="Категория" Binding="{Binding newsCategoryName}"  Width="15*" IsReadOnly="True">
+                        <DataGridTextColumn Header="Группа" Binding="{Binding newsCategoryName}"  Width="15*" IsReadOnly="True">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="HorizontalAlignment" Value="Center" />
