--- a/CompanyNews/Views/UserControls/HamburgerMenu.xaml
+++ b/CompanyNews/Views/UserControls/HamburgerMenu.xaml
@@ -77,7 +77,7 @@
                             HorizontalContentAlignment="Left" Width="200" Margin="0,0,0,0" Padding="20,0,0,0"
                             />
 
-                    <Button Content="Категории постов" Style="{StaticResource HamburgerMenuButtonStyle}" Command="{Binding OpenPageNewsCategory}" 
+                    <Button Content="Группы" Style="{StaticResource HamburgerMenuButtonStyle}" Command="{Binding OpenPageNewsCategory}" 
                             HorizontalContentAlignment="Left" Width="200" Margin="0,0,0,10" Padding="20,0,0,0"/>
 
                     <Border
