--- a/CompanyNews/Views/AdminApp/WorkDepartmentPage.xaml
+++ b/CompanyNews/Views/AdminApp/WorkDepartmentPage.xaml
@@ -127,6 +127,7 @@ Margin="10,0,0,0" IsEnabled="{Binding IsWorkButtonEnable}"/>
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="TextWrapping" Value="Wrap" />
                                     <Setter Property="Margin" Value="0,0,5,0"/>
                                 </Style>
@@ -136,9 +137,10 @@ Margin="10,0,0,0" IsEnabled="{Binding IsWorkButtonEnable}"/>
                         <DataGridTextColumn Header="Описание" Binding="{Binding description}"  Width="*" IsReadOnly="True">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
-                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="HorizontalAlignment" Value="Left" />
+                                    <Setter Property="TextAlignment" Value="Justify" />
                                     <Setter Property="TextWrapping" Value="Wrap" />
-                                    <Setter Property="Margin" Value="0,0,5,0"/>
+                                    <Setter Property="Margin" Value="0,0,0,0"/>
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
