--- a/CompanyNews/Views/UserControls/HamburgerMenu.xaml
+++ b/CompanyNews/Views/UserControls/HamburgerMenu.xaml
@@ -96,7 +96,10 @@
                             HorizontalContentAlignment="Left" Width="200" Margin="0,10,0,0" Padding="20,0,0,0"/>
 
                     <Button Content="Сообщения" Style="{StaticResource HamburgerMenuButtonStyle}"  Command="{Binding OpenPageMessageUsers}" 
-                            HorizontalContentAlignment="Left" Width="200" Margin="0,0,0,10" Padding="20,0,0,0"/>
+                            HorizontalContentAlignment="Left" Width="200" Margin="0,0,0,0" Padding="20,0,0,0"/>
+
+                    <Button Content="Пользователи" Style="{StaticResource HamburgerMenuButtonStyle}"  Command="{Binding OpenPageUsers}" 
+         HorizontalContentAlignment="Left" Width="200" Margin="0,0,0,10" Padding="20,0,0,0"/>
 
                     <Border 
                     Grid.Column="0"
